--- a/client/src/componets/home/templates/home.html
+++ b/client/src/componets/home/templates/home.html
@@ -1,12 +1,4 @@
 <div>
-  Home-page component
-  <span x-large>Your Content Here</span>
-  <input type="text" [value]="data.value" (input)="data.value = $event.target.value" autofocus>
-  <!--
-    Rather than wiring up two-way data-binding ourselves with [value] and (input)
-    we can use Angular's [(ngModel)] syntax
-    <input type="text" [(ngModel)]="data.value" autofocus>
-  -->
-
-  <pre>this.data = {{ data | json }}</pre>
+    Home-page component
+    <button (click)="onClick()">Send ajax</button>
 </div>
