start create login,logout and setToket

--- a/client/src/componets/auth/templates/login.html
+++ b/client/src/componets/auth/templates/login.html
@@ -1,5 +1,5 @@
 <section>
-    <form [ngFormModel]="form" (ngSubmit)="onSubmit()" novalidate>
+    <form [ngFormModel]="form" (ngSubmit)="login()" novalidate>
         <fieldset>
             <legend>Login form</legend>
             <div class="form-group">
